# rustdesk-bootstrap

./: .gitignore  Cargo.toml  README.md  SECURITY.md  build.rs  config.example.rs  config.example.toml
.cargo/: config.toml
assets/: app.manifest  resources.rc
src/: main.rs
