[package]
name = "rustdesk_bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
# Фолбэк HTTP-клиент без SChannel, работает на Win7+ (TLS1.2 через rustls)
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

regex   = "1"
sha2    = "0.10"

# Оставляем старую ветку для совместимости: 0.48.0
windows-sys = { version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_Networking_WinHttp",
  "Win32_System_SystemInformation",
  "Win32_System_Environment"
] }


[build-dependencies]
embed-resource = "2"
[profile.release]
panic = "abort"   # обычный abort (стабильно)
